--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 .chat-message {
   display: flex;
+  width: 30%;
   margin: 50px 30px;
 }
 .chat-text {
@@ -11,12 +14,22 @@
 .chat-body {
   display: flex;
   align-items: center;
-  height: 40px;
-  width: 400px;
-  padding-left: 10px;
+  font-family: 'Varela Round', sans-serif;
+  min-height: 40px;
+  width: 100%;
+  padding: 15px 10px;
   margin-top: 4px;
-  background-color: #e9e9eb;
   border-radius: 5px;
+}
+.chat-body.received {
+  background-color: #e9e9eb;
+}
+.sent-text {
+  margin-left: auto;
+}
+.chat-body.sent {
+  background-color: #1185f7;
+  color: white;
 }
 .user-avatar {
   height: 50px;
