Solution to exercise 5

--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -11,6 +11,13 @@
   justify-content: center;
   margin-left: 10px;
 }
+.chat-bubble {
+  display: flex;
+  align-items: flex-end;
+}
+.chat-tip {
+  margin: 0 -6px;
+}
 .chat-body {
   display: flex;
   align-items: center;
