--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,7 @@
 header {
+  position: fixed;
+  width: 100%;
+  top: 0;
   display: flex;
   align-items: center;
   height: 100px;
@@ -8,10 +11,20 @@ header {
     0px 1px 0.5px rgba(0, 0, 0, 0.075);
 }
 .participants-container {
+  display: flex;
   margin-left: 12%;
+  width: 12%;
 }
-.participants {
+.participant-profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.participant {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  padding-bottom: 5px;
 }
